# mlx-flash

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  verify_30b_flash.py
.github/workflows/: ci.yml
benchmarks/: benchmark_context.py  quality_proof.py
benchmarks/profiler/: profiler.py
docs/: QUALITY.md  architecture.md  findings.md  lmstudio_integration.md  upstream_pr.md
mlx_engine_flash/: __init__.py  config.py  diagnostics.py  generation.py  manager.py  monitor.py  page_cache.py  streamer.py
mlx_engine_flash/integration/: lmstudio.py
mlx_flash/: config.py  disk_kv_cache.py  generation.py  generation_tail.txt  manager.py  prefetch_worker.py  safetensors_mmap.py  tiled.py
mlx_flash/bandwidth/: controller.py
mlx_flash/engine/: __init__.py  engine.py  hooks.py  strategies.py
mlx_flash/integration/: lmstudio.py
mlx_flash/kv_cache/: quantized_disk_cache.py
mlx_flash/pipeline/: executor.py
mlx_flash/scheduler/: global_scheduler.py
scripts/: setup_repo_metadata.sh  test_stream_generate.py
tests/: conftest.py  test_bit_parity.py  test_disk_kv_cache.py  test_integration.py  test_quantized_disk_cache.py  test_sampling_correctness.py  test_streamer.py
tests/property/: test_math_invariants.py
