[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-flash"
version = "0.1.0"
description = "Flash Weight Streaming (low-RAM mode) for LM Studio / mlx-engine"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Matt Wong", email = "matt@example.com" },
]

[project.urls]
Homepage = "https://github.com/matt-k-wong/mlx-flash"
Repository = "https://github.com/matt-k-wong/mlx-flash"
Issues = "https://github.com/matt-k-wong/mlx-flash/issues"

[project.scripts]
flash-monitor = "mlx_flash.monitor:run_monitor"
flash-bench = "benchmarks.bench_flash:cli"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "UP", "N", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["-v", "--tb=short"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mlx_flash*", "benchmarks*", "examples*"]
